<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FoodApp</string>
    <string name="home">Home</string>
    <string name="what_would_you_like_to_eat">What would you like to eat?</string>
    <string name="categories">Categories</string>
    <string name="popular_items">Popular Items</string>
    <string name="favorites">Favorites</string>
    <string name="content1" tools:ignore="Typos">content1</string>
    <string name="content2">content2</string>
    <string name="categories_fragment">Categories Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="instructions">Instructions:</string>
    <string name="content3">content3</string>
    <string name="content4">content4</string>
    <string name="content5">content5</string>
    <string name="content6">content6</string>
    <string name="content7">content7</string>
    <string name="category_name">Category Name</string>
    <string name="content8">content8</string>
    <string name="test2">Test2</string>
</resources>